--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/base:latest",
+    "image": "mcr.microsoft.com/vscode/devcontainers/javascript-node:0-18",
     "customizations": {
         "vscode": {
             "settings": {
